--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "time-tracking",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mysql2": "^3.6.0",
-    "nodemon": "^3.0.1"
-  }
+	"name": "time-tracking",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"body-parser": "^1.20.2",
+		"cors": "^2.8.5",
+		"crypto": "^1.0.1",
+		"dotenv": "^16.3.1",
+		"express": "^4.18.2",
+		"mssql": "^10.0.0",
+		"mysql2": "^3.6.1",
+		"nodemon": "^3.0.1",
+		"swagger-ui-express": "^5.0.0",
+		"yamljs": "^0.3.0"
+	}
 }
